--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 	                  </a>
 	               </div>
 	        		</div> <!-- /folio-item -->     
-
+<!--
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
@@ -480,7 +480,7 @@
 	               </div>
 	        		</div> <!-- /folio-item -->
 
-	            <div class="bgrid folio-item">
+	<!--            <div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/salad.jpg" alt="Salad">
 	                  <a href="#modal-06" class="overlay">
