--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <!--[if IE 8 ]><html class="no-js oldie ie8" lang="en"> <![endif]-->
 <!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
@@ -29,7 +29,9 @@
 
    <!-- favicons
 	================================================== -->
-	
+	<link rel="shortcut icon" href="logo.jpg" type="image/png">
+	<link rel="icon" href="logo.jpg" type="image/png">
+
 
 </head>
 
@@ -88,6 +90,10 @@
    			
    		</div>   		 		
    	</div> <!-- /intro-content --> 
+
+
+	<link rel="shortcut icon" href="path_to_your_favicon.ico" type="image/x-icon">
+	<link rel="icon" href="path_to_your_favicon.ico" type="image/x-icon">
 
    	<ul class="intro-social">        
          <li><a href="https://www.facebook.com/profile.php?id=100010960566281&sk=about_details"><i class="fa fa-facebook"></i></a></li>
@@ -454,25 +460,25 @@
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Beetle</h3>	     					    
+	                     		<h3 class="folio-title">Logo Design for CFC</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  using adobe illustrator
 		     					      </span>		     		
 		     					   </div>  	                      	
 	                     </div>                    
 	                  </a>
 	               </div>
 	        		</div> <!-- /folio-item -->     
-<!--
+
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
+	               	<img src="images/portfolio/ems.png" alt="EMS">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Lighthouse</h3>	     					    
+	                     		<h3 class="folio-title">Election Management System</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Development
+		     					       	  using streamlit and SQL
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -512,7 +518,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="">Details</a>
+			            <a href="https://portfolio-idfa72djfuphfgk3wjhwt8.streamlit.app/">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -583,18 +589,18 @@
 				   <div id="modal-05" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-lighthouse.jpg" alt="" />
+				     		<img src="images/portfolio/ems.png" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Lighthouse</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Election Application</h4>		      
+					      <p> A Streamlit application to Manage the Election in the Country, which reduce the malpractise and help the Voters in the Country to do various operataion.</p>
 
-					      <div class="categories">Web Development</div>			               
+					      <div class="categories">Application</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://election-app.streamlit.app/">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
